# Cerbibot

./: .gitignore  LICENSE  README.md
backend/: .gitignore  CONTRIBUTING.md  MMY_Test_Plan_Filled_Example.md  MMY_Test_Plan_and_Results_Template.md  Makefile  README.md  SECURITY.md  package-lock.json  pyproject.toml
backend/config/: config.example.yaml
backend/evaluation/: harness.py  role_harness.py
backend/integrations/: discord_bot.py
backend/mmctl/: __main__.py
backend/orchestrator/: budgets.py  config.py  rate_limiter.py  router.py  router_weights.py  server.py  session.py
backend/policies/: base.yaml  development.yaml  production.yaml
backend/prompts/: critic_v1.yaml  drafter_v1.yaml  refiner_v1.yaml  security_reviewer_v1.yaml
backend/scripts/: agent_task_check.py  agent_task_smoke.sh  agent_task_status_md.py  agent_task_suite.py  ci_policy_check.sh  core_rc_sweep.py  live_acceptance_check.py  local_pentest_harness.py  prepare_catalog_key_rotation.py  push_updates.sh  refresh_mmy_status_docs.py  route_promotion_metrics.py  skills_baseline_check.sh  update_readme_badges.py
backend/skills/: summarize_repo.workflow.yaml
backend/tests/: test_admin_auth.py  test_adversarial_runner.py  test_artifacts.py  test_audit_taint.py  test_broker.py  test_budgets.py  test_catalog_signature.py  test_cli.py  test_collaboration.py  test_config.py  test_consensus.py  test_council.py  test_debate.py  test_delegate_gateway.py  test_discord_bot.py  test_encryption.py  test_encryption_coverage.py  test_fact_checker.py  test_guardian.py  test_intent_drift.py  (+37 more)
(+137 files in other folders)
